# ChangeLog for mail-mta/courier
# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/mail-mta/courier/ChangeLog,v 1.113 2008/08/23 01:50:34 cardoe Exp $

  23 Aug 2008; Doug Goldstein <cardoe@gentoo.org> metadata.xml:
  add GLEP 56 USE flag desc from use.local.desc

*courier-0.60.0 (21 Jul 2008)

  21 Jul 2008; Hanno Boeck <hanno@gentoo.org> +courier-0.60.0.ebuild:
  Version bump, as-needed-Patch removed, has been applied upstream.

  16 Jul 2008; Luca Longinotti <chtekk@gentoo.org> courier-0.53.2-r1.ebuild,
  courier-0.55.1-r1.ebuild, courier-0.59.0.ebuild:
  Dep on PostgreSQL libs only.

  14 Jun 2008; nixnut <nixnut@gentoo.org> courier-0.59.0.ebuild:
  Stable on ppc wrt bug 223767

  07 Jun 2008; Raúl Porcel <armin76@gentoo.org> courier-0.59.0.ebuild:
  alpha/ia64 stable wrt #223767

  07 Jun 2008; Friedrich Oslage <bluebird@gentoo.org> courier-0.59.0.ebuild:
  stable on sparc, bug #223767

  04 Jun 2008; Dawid Węgliński <cla@gentoo.org> courier-0.59.0.ebuild:
  Stable on x86/amd64 (bug #223767)

  02 Jun 2008; Jeroen Roovers <jer@gentoo.org> courier-0.59.0.ebuild:
  Stable for HPPA (bug #223767).

  21 May 2008; Tiziano Müller <dev-zero@gentoo.org>
  courier-0.53.2-r1.ebuild, courier-0.55.1-r1.ebuild, courier-0.59.0.ebuild:
  Changed dependency for postgresql from dev-db/postgresql to
  virtual/postgresql-server

  21 May 2008; Tiziano Müller <dev-zero@gentoo.org>
  courier-0.53.2-r1.ebuild, courier-0.55.1-r1.ebuild, courier-0.59.0.ebuild:
  Changed dependency for postgresql from dev-db/postgresql to
  virtual/postgresql-server

  14 May 2008; Hanno Boeck <hanno@gentoo.org> courier-0.59.0.ebuild:
  Remove uclibc-sed (this is already in upstream). remove global eautoreconf
  call (we don't need it and it causes trouble).

  05 May 2008; Hanno Boeck <hanno@gentoo.org>
  +files/courier-0.59.0-asneeded.patch, metadata.xml, courier-0.59.0.ebuild:
  Fix for --as-needed, thanks to flameeyes.
