@@ -6,6 +6,7 @@ AUX bofh 23 RMD160 995b6b103c29f390c2f0230af95d4c0823423dcb SHA1 f6399bc612af33c
 AUX courier-0.59.0-asneeded.patch 534 RMD160 fe2f28235842220d999dc77ed22857dd99c648a2 SHA1 5ae8a8cefbbd91f2146988c9095ac0e3668c1135 SHA256 802ae0431c9d2b55cdda4602522058874765170d12f4e2fcdd064971f8d31991
 AUX courier-init 5182 RMD160 7c5d80d7fdd4e09418461a746f6642f2a276b88b SHA1 beef0a5742fe31388947e945b4646c1dbe5627f1 SHA256 4b1a030bbba852c9c2c8d50e58c43c8e97b5a1ac29a04974a1f097362929e126
 AUX courier-init-r1 5252 RMD160 2c770526b4fd2e342c904289573c4f8cb19ca6df SHA1 ac67cd4a9664b1010322b5260f84d017ee06736b SHA256 e74fc291b49dace3ffb3af1844b976255c0c7a34aa0e2d87b5c05f672db9058a
+AUX courier-init-r2 4877 RMD160 bc1bf99be4e032a0e52bba71801c89f9a6cd4383 SHA1 a9e8329fb0582fc0cf0341de4e054096587f2790 SHA256 d6a53142751f71f3a6287806259a640fdc1c8807003510d775b0239e8410d02a
 AUX dot_courier 26 RMD160 cf20012379abbb63f78e1eb0f9cbaefff6d1048d SHA1 8e5e09e167035d100859b42311b6dda2842f4d67 SHA256 8c585031b4356ca1f887e0823fd9b365fff57a5f9cc32541eccfc1542d5d3763
 AUX locallowercase 0 RMD160 9c1185a5c5e9fc54612808977ee8f548b2258d31 SHA1 da39a3ee5e6b4b0d3255bfef95601890afd80709 SHA256 e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855
 AUX mailer.conf 197 RMD160 4229dfa9cf33b275571538211dad33da5ae84048 SHA1 caf095797e8c526dc5fec59d9d89d51f318cd28a SHA256 5a946a7c4ed42bbddf2c471e2e00898150e4bff33f4af70620cf814ab2f12b47
@@ -15,13 +16,13 @@ AUX set-mime 741 RMD160 8ed45fb4a0aee168a70cdcab6d17cf1606f85cad SHA1 b8834602c7
 DIST courier-0.59.0.tar.bz2 7121762 RMD160 580e57fd9d39b62772e07dcdec653379cd21caaf SHA1 6870d2b12f1c93d5ede12f2a5c9c1107a7fb647c SHA256 e488cc920ed970c6d38496dba21359b50c6032ff4f2f91432b5d23db261578ec
 DIST courier-0.60.0.tar.bz2 7067430 RMD160 f35a9329e87a948ca9abf6bd7fcc42e4bfe3adac SHA1 13be35f2631830ea2bf66831ea492d83b8247464 SHA256 c13da0a0b76c4a59aa219d037129b8305293d1091143027f2dfd631b9e470e64
 EBUILD courier-0.59.0.ebuild 10180 RMD160 0bcd931b501817ffdacfcf2684763ade3c264376 SHA1 b73c6503fe10122d24ea45082a39efd0b156ac51 SHA256 6d78cd3a0037475b12a8c7247ad2c443887de326f2ef18804bc7ee65bcb9c837
-EBUILD courier-0.60.0.ebuild 10112 RMD160 46e93f8bca7a8eee888048d9edadbbbfe057625e SHA1 07b25c963b7094e3ad804b705bb038293a0fe844 SHA256 04e3d55de3c0fcb9abd0e4ee66852f39cffc3eaf8101ff0efe063d3c009ef818
-MISC ChangeLog 29654 RMD160 71350b454fd5eb00e37a2c30dffc1432c5800bde SHA1 850a2da115a54831e008ad54d46cca8684832302 SHA256 d6831c5017ae9f9b65bbc95b146eb2c1749d51bf61edee63df4b60cfe669c177
+EBUILD courier-0.60.0.ebuild 10055 RMD160 7de8555d4e7287ed2171a779e95851fcdc73ad25 SHA1 0e43ae4359cf395e28515e20395d941afbd7f615 SHA256 3c447554f71ccb1e170cce6f5b15c4efc067058b8f877e0d5de8bf868579df11
+MISC ChangeLog 29825 RMD160 97c5b22bdd1d5b5952011706de79a4f187e02e43 SHA1 4aefdbe9a4d7dbe97590d98a19bd18a167f1c275 SHA256 d9dd68f092873ce73e1f8e5f9a5d3b1e33601bf5f5f155c1a6b47f031c279ded
 MISC metadata.xml 687 RMD160 753323e40a9add2b07fd1f138c672ce283d2f255 SHA1 2e8255902a9e0394bd27e13e488e84ba70f05845 SHA256 ea417e66d396e793212529ed20f5570b0c97eb666a5ba52bb3202bbfbc022be1
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.9 (GNU/Linux)
 
-iEYEARECAAYFAkivbO8ACgkQoeSe8B0zEfy9oACfflr8Jpu47TNRU11GCJ1n/Y/8
-ly4AnjBnRbfJ+72cn64xEuo031fT4d/N
-=vFz/
+iEYEARECAAYFAkklZXUACgkQr2QksT29OyAjHQCeLglV+wSCYDRCLLiGJv5x1jee
+H+MAn18ntVTezuCWmwMtyIto2vnzRljb
+=6gDD
 -----END PGP SIGNATURE-----
